--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
   "homepage": "https://github.com/LilithPrimary/crud-api#readme",
   "devDependencies": {
     "@types/node": "^18.11.18",
+    "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
     "clean-webpack-plugin": "^4.0.0",
     "eslint": "^8.31.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^17.0.0",
     "nodemon": "^2.0.20",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
@@ -40,6 +40,7 @@
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "uuid": "^9.0.0"
   }
 }
