--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,23 +4,16 @@
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
-    "airbnb-base",
-    "airbnb-typescript/base"
+    "airbnb-base"
   ],
   "parserOptions": {
     "ecmaVersion": "latest",
-    "sourceType": "module",
-    "project": "./tsconfig.json"
-  },
-  "import/resolver": {
-    "node": {
-      "extensions": [".js", ".jsx", ".ts", ".tsx"]
-    }
+    "sourceType": "module"
   },
   "env": {
     "es6": true,
-    "browser": true,
-    "node": true
+    "node": true,
+    "jest": true
   },
   "rules": {
     "@typescript-eslint/no-explicit-any": 2,
@@ -32,7 +25,8 @@
     "@typescript-eslint/no-unused-vars": "error",
     "no-shadow": "off",
     "@typescript-eslint/no-shadow": ["error"],
-    "typescript-eslint/naming-convention": null
+    "import/extensions": "off",
+    "import/no-unresolved": "off"
   },
-  "ignorePatterns": ["*.js"]
+  "ignorePatterns": ["*.js", "*.cjs"]
 }
