--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "start:dev": "nodemon",
     "start:prod": "npm run build && node ./dist/main.bundle.cjs",
     "build": "webpack --config ./webpack.config.js --env mode=prod",
+    "dev": "webpack",
     "fix": "tsc-esm-fix --target='target/es6'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -25,6 +27,7 @@
   },
   "homepage": "https://github.com/LilithPrimary/crud-api#readme",
   "devDependencies": {
+    "@types/jest": "^29.2.5",
     "@types/node": "^18.11.18",
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
@@ -32,7 +35,10 @@
     "clean-webpack-plugin": "^4.0.0",
     "eslint": "^8.31.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "jest": "^29.3.1",
     "nodemon": "^2.0.20",
+    "ts-jest": "^29.0.5",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
@@ -40,7 +46,6 @@
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
-    "eslint-config-airbnb-typescript": "^17.0.0",
     "uuid": "^9.0.0"
   }
 }
