--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "module": "ES2020",
-    "moduleResolution": "Node",
+    "moduleResolution": "node",
     "target": "ES2020",
     "sourceMap": true,
     "outDir": "dist",
@@ -9,6 +9,7 @@
   },
   "include": ["src/**/*"],
   "ts-node": {
-    "esm": true
+    "esm": true,
+    "experimentalSpecifierResolution": "node"
   }
 }
